--- a/app/views/carpool/index.html.erb
+++ b/app/views/carpool/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Carpool#index</h1>
-<p>Find me in app/views/carpool/index.html.erb</p>
+<body>
+ <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">CARPOOLING</a>
+      <%=image_tag("logo1.png", :class=>"img-circle", :width=> "50px", :height=> "50px")%> 
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+ <form class="form-inline" role="form">
+    <div class="form-group">
+      <label for="strat_address"></label>
+      <input type="text" class="form-control" id="start_address" placeholder="Start Address">
+    </div>
+    <div class="form-group">
+      <label for="destination_address"></label>
+      <input type="text" class="form-control" id="destination_address" placeholder="Destination Address">
+    </div>
+    
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</body>
