devise gem added to gem file

--- a/app/assets/stylesheets/mystyle.css
+++ b/app/assets/stylesheets/mystyle.css
@@ -2,4 +2,10 @@ body{
 	background-image: url("carpooling.jpg");
 	background-size: cover;
 }
-	
+.form-inline{
+	background-color: transparent;
+}
+.navbar-inverse{
+	opacity: .60;
+
+}
