all the posts were shown in index page root was change to post/index page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<section>
+	<% @posts.each do|i| %>
+	<%= i.departure %> 
+	<%= i.destination %>
+	<%= i.d_time %>
+	<%= i.seats %>
+	<% end %>
+</section>
