--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -16,6 +16,7 @@
     </div>
   </div>
 </nav>
+<div class = "container-fluid">
  <form class="form-inline" role="form">
     <div class="form-group">
       <label for="strat_address"></label>
@@ -28,4 +29,5 @@
     
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
+</div>
 </body>
