--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -1,4 +1,4 @@
-<body>
+
  <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -10,13 +10,14 @@
         <li class="active"><a href="#">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><span class="glyphicon glyphicon-user"> 
+          <%= link_to "Sign Up",  new_user_registration_path %> </span></li>
+        <li><span class="glyphicon glyphicon-log-in"><%= link_to "Login",  new_user_session_path %></span></li>
       </ul>
     </div>
   </div>
 </nav>
-<div class = "container-fluid">
+<div id = "container-fluid">
  <form class="form-inline" role="form">
     <div class="form-group">
       <label for="strat_address"></label>
@@ -30,4 +31,3 @@
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
-</body>
