--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<%= yield %>
+	<%= yield %>
+	<br>
+	<% if user_signed_in? %>
+		<%= link_to "sign out",destroy_user_session_path, method: :delete   %>
+	<% end %>
 
 </body>
 </html>
