form displayed to add  posts by the user and the added post is diplayed in index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<%= yield %>
 	<br>
 	<% if user_signed_in? %>
-		<%= link_to "sign out",destroy_user_session_path, method: :delete   %>
+		<%= link_to "sign out",destroy_user_session_path, method: :delete, :class=>"btn btn-primary"   %>
 	<% end %>
 
 </body>
