all posts are now viewed in table and a new def to extract date time was written in post.rb partial form for new post was completed

--- a/app/assets/stylesheets/mystyle.css
+++ b/app/assets/stylesheets/mystyle.css
@@ -11,6 +11,13 @@
 
 }*/
 
-.post .col-sm-4{
-	text-align: center;
+.post {
+	background-color: aliceblue;
+	width: auto;
+	margin:5px auto;	
+}
+
+
+.post .table{
+
 }
