--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<% if flash[:msg] %>
+	<%= flash[:msg] %>
+	<% end %>
 
 	<%= yield %>
 	<br>
 	<% if user_signed_in? %>
-		<%= link_to "sign out",destroy_user_session_path, method: :delete, :class=>"btn btn-primary"   %>
+		<%= link_to "sign out",destroy_user_session_path, method: :delete, :class=>"btn btn-primary" %>
 	<% end %>
 
 </body>
